[package]
name = "ltc681x"
description = "Client LTC681X battery monitoring family"
keywords = ["LTC681X", "BMS", "no_std", "battery", "ic"]
categories  = ["embedded", "hardware-support", "no-std"]
authors = ["PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-LTC681X"
readme = "README.md"
documentation = "https://docs.rs/ltc681x"

[dependencies]
embedded-hal = "1.0.0"
heapless = "0.8.0"
fixed = "1.15.0"

[dev-dependencies]
mockall = "0.11.0"

[features]
default = ["example"]
# Mocks for doc examples
example = []
# Fail on warnings
strict = []